BARC UAT/src/objects/Delivery_Challan__c.object
<CustomObject>
    <fields>
        <fullName>Declarations__c</fullName>
        <label>Declarations</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Delivery_Challan_Date__c</fullName>
        <label>Delivery Challan Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delivery_Mode__c</fullName>
        <label>Delivery Mode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Docket_No__c</fullName>
        <label>Docket No.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GRN_Date__c</fullName>
        <label>GRN Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GRN_No__c</fullName>
        <label>GRN No.</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Installer_Name__c</fullName>
        <label>Installer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Boxes__c</fullName>
        <label>Number of Boxes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Packing_List__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Packing List</label>
        <referenceTo>Packing_List__c</referenceTo>
        <relationshipLabel>Delivery Challan</relationshipLabel>
        <relationshipName>Delivery_Challan</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Place_of_Supply__c</fullName>
        <label>Place of Supply</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipment_Weight_Kg__c</fullName>
        <label>Shipment Weight (Kg.)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Amount__c</fullName>
        <label>Total Amount</label>
        <summarizedField>Delivery_Challan_Line_Item__c.Copy_Total_Value__c</summarizedField>
        <summaryForeignKey>Delivery_Challan_Line_Item__c.Delivery_Challan__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Transporter_Name__c</fullName>
        <label>Transporter Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Delivery Challan</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>DC-{0}</displayFormat>
        <label>Delivery Challan No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Delivery Challan</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>